--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
 	<title>Todolist</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="icon" href="./assets/images/logo.webp" sizes="32x32" />
+	<link rel="icon" href="./assets/images/logo.webp" sizes="192x192" />
+	<link rel="apple-touch-icon" href="./assets/images/logo.webp" />
 </head>
 
 <body>
