Actualizar clase del body en index.html

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<link rel="apple-touch-icon" href="./assets/images/logo.webp" />
 </head>
 
-<body>
+<body class="app sidebar-mini">
 	<app-root></app-root>
 </body>
 
