--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<link rel="apple-touch-icon" href="./assets/images/logo.webp" />
 </head>
 
-<body class="app sidebar-mini">
+<body>
 	<app-root></app-root>
 </body>
 
